# base-go

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
core/: CMakeLists.txt  core.c  core.cpp  core.h
engine/: CMakeLists.txt  board.h  clock.c  clock.h
gtp/: CMakeLists.txt  gtp.h  play_gtp.c
sgf/: CMakeLists.txt  sgfnode.c
utils/: CMakeLists.txt  config.h.in  gg_utils.h  log.cpp  log.h
