cmake_minimum_required(VERSION 3.12)
project("Base Go")

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 11)

option(USE_LOGGER "Use the logger module - needs Boost" ON)
if (USE_LOGGER)
    set(BUILD_SHARED_LIBS ON)
    set(Boost_USE_STATIC_LIBS OFF)
    set(Boost_COMPILE_DEFINITIONS BOOST_LOG_DYN_LINK)
    find_package(Boost 1.67.0 QUIET COMPONENTS log)
    if (Boost_FOUND)
        set(LOGGER_ENABLED TRUE)
        message(STATUS "Boost found - logging will be enabled")
    else ()
        message(WARNING "Boost not found - logging will be disabled")
    endif (Boost_FOUND)
endif (USE_LOGGER)

add_subdirectory(core)
add_subdirectory(engine)
add_subdirectory(gtp)
add_subdirectory(sgf)
add_subdirectory(utils)

set(LIBRARIES GTP)
if (LOGGER_ENABLED)
    list(APPEND LIBRARIES Log)
endif (LOGGER_ENABLED)

add_executable(BaseGo main.cpp)
target_include_directories(BaseGo PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(BaseGo ${LIBRARIES})

configure_file ("${PROJECT_SOURCE_DIR}/utils/config.h.in" "${PROJECT_SOURCE_DIR}/utils/config.h")
